--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -21,6 +21,6 @@ jobs:
         id: vars
         run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
       - name: Build the tagged Docker image
-        run: docker build . -t pne_roberts/gatsby-simple-container:${{steps.vars.outputs.sha_short}}
+        run: docker build . -t quay.io/pne_roberts/gatsby-simple-container:${{steps.vars.outputs.sha_short}}
       - name: Push the tagged Docker image
-        run: docker push pne_roberts/gatsby-simple-container:${{steps.vars.outputs.sha_short}}
+        run: docker push quay.io/pne_roberts/gatsby-simple-container:${{steps.vars.outputs.sha_short}}
