--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -32,6 +32,6 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          platforms: linux/arm/v7,linux/arm64
+          platforms: linux/arm/v7
           push: true
           tags: pne_roberts/gatsby-simple-container:${{steps.vars.outputs.sha_short}}
