--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -34,4 +34,4 @@ jobs:
           context: .
           platforms: linux/arm/v7
           push: true
-          tags: pne_roberts/gatsby-simple-container:${{steps.vars.outputs.sha_short}}
+          tags: quay.io/pne_roberts/gatsby-simple-container:${{steps.vars.outputs.sha_short}}
