--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -4,7 +4,7 @@ metadata:
   labels:
     app: gatsby-app
   name: gatsby-app
-  namespace: poprocks
+  namespace: finestorm
 spec:
   replicas: 2
   selector:
