--- a/manifests/prod/deployment.yml
+++ b/manifests/prod/deployment.yml
@@ -1,6 +1,8 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: app
+  labels:
+    app: gatsby-app
+  name: gatsby-app
 spec:
   replicas: 3
