--- a/manifests/dev/kustomization.yaml
+++ b/manifests/dev/kustomization.yaml
@@ -1,6 +1,13 @@
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+
 resources:
 - ../base
 - ingress.yml
 
 patchesStrategicMerge:
-  - deployment.yml
+- deployment.yml
+
+images:
+- name: https://quay.io/pne_roberts/gatsby-simple-container
+  newTag: ec8f34c
