--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -1,37 +1,37 @@
-# name: Docker Image CI
+name: Docker Image CI
 
-# on:
-#   pull_request:
-#     branches:
-#       - main
+on:
+  push:
+    branches:
+      - main
 
-# jobs:
-#   build:
-#     runs-on: ubuntu-latest
+jobs:
+  build:
+    runs-on: ubuntu-latest
 
-#     steps:
-#       - uses: actions/checkout@v1
-#       - name: Get the version
-#         id: vars
-#         run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
-#       - name: Set up QEMU
-#         uses: docker/setup-qemu-action@v1
-#       - name: Set up Docker Buildx
-#         id: buildx
-#         uses: docker/setup-buildx-action@v1
-#       - name: Available platforms
-#         run: echo ${{ steps.buildx.outputs.platforms }}
-#       - name: Login to Quay.io
-#         uses: docker/login-action@v1
-#         with:
-#           registry: quay.io
-#           username: ${{ secrets.QUAY_USERNAME }}
-#           password: ${{ secrets.QUAY_TOKEN }}
-#       - name: Build and push
-#         id: docker_build
-#         uses: docker/build-push-action@v2
-#         with:
-#           context: .
-#           platforms: linux/arm/v7
-#           push: true
-#           tags: quay.io/pne_roberts/gatsby-simple-container:${{steps.vars.outputs.sha_short}}
+    steps:
+      - uses: actions/checkout@v1
+      - name: Get the version
+        id: vars
+        run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Available platforms
+        run: echo ${{ steps.buildx.outputs.platforms }}
+      - name: Login to Quay.io
+        uses: docker/login-action@v1
+        with:
+          registry: quay.io
+          username: ${{ secrets.QUAY_USERNAME }}
+          password: ${{ secrets.QUAY_TOKEN }}
+      - name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          platforms: linux/arm/v7
+          push: true
+          tags: quay.io/pne_roberts/gatsby-simple-container:${{steps.vars.outputs.sha_short}}
