--- a/.github/workflows/preview-env.yml
+++ b/.github/workflows/preview-env.yml
@@ -15,8 +15,9 @@ jobs:
           repository: jzr1991/gatsby-simple-container-config
       - name: Create preview environment
         run: |
-          cp -R $GITHUB_WORKSPACE/gatsby-app/dev $GITHUB_WORKSPACE/gatsby-app/${{github.head_ref}}
-          cd $GITHUB_WORKSPACE/gatsby-app/${{github.head_ref}}
+          mkdir $GITHUB_WORKSPACE/gatsby-app/test-${{github.sha}}
+          cp -R $GITHUB_WORKSPACE/gatsby-app/dev $GITHUB_WORKSPACE/gatsby-app/test-${{github.sha}}
+          cd $GITHUB_WORKSPACE/gatsby-app/test-${{github.sha}}
           rm ingress.yml
           kustomize edit set image quay.io/pne_roberts/gatsby-simple-container:${{github.sha}}
           kustomize edit set nameprefix {{github.head_ref}}
