--- a/.github/workflows/preview-env.yml
+++ b/.github/workflows/preview-env.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Create preview environment
         run: |
           mkdir $GITHUB_WORKSPACE/gatsby-app/test-${{github.sha}}
-          cp -R $GITHUB_WORKSPACE/gatsby-app/dev/* $GITHUB_WORKSPACE/gatsby-app/test-${{github.sha}}/*
+          cp $GITHUB_WORKSPACE/gatsby-app/dev/ $GITHUB_WORKSPACE/gatsby-app/test-${{github.sha}}
           cd $GITHUB_WORKSPACE/gatsby-app/test-${{github.sha}}
           rm ingress.yml
           kustomize edit set image quay.io/pne_roberts/gatsby-simple-container:${{github.sha}}
