--- a/.github/workflows/preview-env.yml
+++ b/.github/workflows/preview-env.yml
@@ -8,7 +8,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    container: k8s.gcr.io/kustomize/kustomize:v3.8.7
+    container: 
+      image: k8s.gcr.io/kustomize/kustomize:v3.8.7
     steps:
       - uses: actions/checkout@v2
         with:
@@ -18,8 +19,8 @@ jobs:
           mkdir $GITHUB_WORKSPACE/gatsby-app/test-${{github.sha}}
           cp -R $GITHUB_WORKSPACE/gatsby-app/dev/ $GITHUB_WORKSPACE/gatsby-app/test-${{github.sha}}
           cd $GITHUB_WORKSPACE/gatsby-app/test-${{github.sha}}
-          kustomize edit set image quay.io/pne_roberts/gatsby-simple-container:${{github.sha}}
-          kustomize edit set nameprefix {{github.head_ref}}
+          ./kustomize edit set image quay.io/pne_roberts/gatsby-simple-container:${{github.sha}}
+          ./kustomize edit set nameprefix {{github.head_ref}}
           cd ../
           echo '\n - test' >> gatsby-app/kustomization.yaml
       - name: Commit new stuff
