--- a/.github/workflows/preview-env.yml
+++ b/.github/workflows/preview-env.yml
@@ -19,8 +19,8 @@ jobs:
           mkdir $GITHUB_WORKSPACE/gatsby-app/test-${{github.sha}}
           cp -R $GITHUB_WORKSPACE/gatsby-app/dev/ $GITHUB_WORKSPACE/gatsby-app/test-${{github.sha}}
           cd $GITHUB_WORKSPACE/gatsby-app/test-${{github.sha}}
-          ./kustomize edit set image quay.io/pne_roberts/gatsby-simple-container:${{github.sha}}
-          ./kustomize edit set nameprefix {{github.head_ref}}
+          /app/kustomize edit set image quay.io/pne_roberts/gatsby-simple-container:${{github.sha}}
+          /app/kustomize edit set nameprefix {{github.head_ref}}
           cd ../
           echo '\n - test' >> gatsby-app/kustomization.yaml
       - name: Commit new stuff
