--- a/.github/workflows/preview-env.yml
+++ b/.github/workflows/preview-env.yml
@@ -29,7 +29,8 @@ jobs:
           echo "\n - test" >> kustomization.yaml
       - name: Commit new stuff
         run: |
-          git config --global user.name 'Jack Roberts'
-          git config --global user.email 'jzr1991@users.noreply.github.com'
-          git commit -am "Automated report [skip ci]"
-          git push
+          git config --local user.name "github-actions[bot]"
+          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add -A
+          git commit -m "PREVIEW ENVIRONMENT"
+          git push https:://jzr1991:${{ secrets.API_TOKEN_GH }}@github.com/jzr1991/gatsby-simple-container-config.git
