--- a/.github/workflows/preview-env.yml
+++ b/.github/workflows/preview-env.yml
@@ -12,6 +12,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           repository: jzr1991/gatsby-simple-container-config
+          token: ${{secrets.API_TOKEN_GH}}
       - name: Create preview environment
         run: |
           cd $GITHUB_WORKSPACE
@@ -29,8 +30,8 @@ jobs:
           echo "\n - test" >> kustomization.yaml
       - name: Commit new stuff
         run: |
-          git config --local user.name "jzr1991"
-          git config --local user.email "jzr1991@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add -A
           git commit -m "PREVIEW ENVIRONMENT"
           git push https://$USERNAME:$REPO_KEY@github.com/$USERNAME/gatsby-simple-container-config.git
